--- a/gridStyle.css
+++ b/gridStyle.css
@@ -65,7 +65,6 @@ main {
     display: grid;
     grid-area: main;
     grid-template-areas: "mainHead mainHead mainHead" "artZone section article";
-    border: 1px solid black;
     border-radius: 5px;
 }
 
@@ -73,7 +72,7 @@ main {
     grid-area: mainHead;
     display: grid;
     grid-template-areas: "artZone artZone artZone";
-    color: rgb(0, 0, 1);
+    color: rgb(80, 80, 85);
 }
 
 #artZone {
@@ -81,13 +80,15 @@ main {
     grid-area: artZone;
     grid-template-areas: "section article article";
     margin: 0 0 0;
-    border: 1px solid black;
-    color: green;
 }
 
 #section{
   margin: 0 10px;
     background-color: #f6f665;
+}
+#section .parag2{
+  color: rgb(53, 53, 218);
+  font-weight: bold;
 }
 
 #article{
@@ -98,7 +99,10 @@ main {
 
 #aside {
     grid-area: aside;
-    color: magenta;
+    color: red;
+}
+#aside ol{
+  color: green;
 }
 
 footer {
@@ -107,25 +111,15 @@ footer {
     background-image: linear-gradient(120deg, white, #6f6f6d 50%, #454540 20%);
 }
 
-/* a{
-    background-color: yellow;
-}
-
-
-
-li a{
-    display: block;
-    text-align: center;
-    padding: 10px;
-
-} */
-
 /***************Login*************/
 
 .container{
     grid-area: wrapContainer;
+    
 }
-
+#container .header{
+  text-transform: uppercase;
+}
 #div{
     grid-area: loginContainer; 
 }
@@ -162,16 +156,34 @@ li a{
 }
 
 input[type=text]{
-  margin: 20px;
-  height: 25px;
+  /* margin: 20px; */
+  /* height: 25px; */
   width: auto;
   border-radius: 10px;
 }
 input[type=password]{
-  margin: 5px;
-  height: 25px;
+  /* margin: 5px; */
+  /* height: 25px; */
   width: auto;
   border-radius: 10px;
+}
+input {
+  border: 2px solid;
+  margin: 0.25rem;
+  padding: 0.3rem;
+  transition: background-color 0.5s ease-out;
+}
+
+input:optional {
+  border-color: gray;
+}
+
+input:required {
+  border-color: black;
+}
+
+input:invalid {
+  border-color: red;
 }
 button[type=submit] {
   margin: 5px;
