--- a/gridStyle.css
+++ b/gridStyle.css
@@ -156,14 +156,10 @@ footer {
 }
 
 input[type=text]{
-  /* margin: 20px; */
-  /* height: 25px; */
   width: auto;
   border-radius: 10px;
 }
 input[type=password]{
-  /* margin: 5px; */
-  /* height: 25px; */
   width: auto;
   border-radius: 10px;
 }
@@ -204,6 +200,7 @@ input[type=button]{
 .cancelbtn{
     background-color: rgb(220, 66, 0);
 }
-.containerSend{
-    background-color: cyan;
+
+.psw{
+  color: #6f6f6d;
 }
