--- a/style.css
+++ b/style.css
@@ -5,105 +5,210 @@
 
 body{
     background-image: linear-gradient(120deg, #ce9aff 0%, #65b5f6 100%);    
-    width: 1024;
     margin-left: 20px;
     margin-right: 20px;
 }
 
-header{
-    display: flex; 
-    flex-direction: row;
-    text-align: center;
-    margin-top: auto;
-    padding: 6px;
-    height: 100%;
+.header{
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0;
+    justify-content: flex-end;
     background: rgb(113, 113, 206);
     border: 2px solid black;
     border-radius: 5px;
 }
 
-nav {
-    display: flex;
-    width: 80%;
-    margin: 1 -30px;
-    align-items: center;
+.resize {
+    width: 60px;
+    height: auto;
+}
+#navbar {
+    flex: 3 0px;
+    min-width: 20%;
     justify-content: space-between;
 }
-
-nav ul a{
-    padding: 4px;
-    display: inline-flex;
-    margin: 0 30px;
-}
-
 #logo {
-    flex: 0 0 0;
-    font-size: 15px;
-    border-bottom: 1px solid black;
-}
-
-nav #login{
-    margin-left: auto;
-    padding: 15px;
-    background: purple;
-    color: aqua;
-    border: 1px solid black;
-}
-
-.main{
-    display: flex;
-    flex-direction: row;
+    flex: 1;
+    padding: 5px;
     text-align: center;
-    padding: 6px;
-    background: chartreuse;
-    width: 75%;
-    border: 5px solid black;
+    font-size: 14px;
+    font-family: cursive;
 }
 
-h2{
-    display: inline-flex;
-    flex-direction: row-reverse;
-    color: aquamarine;
-    background-color: azure;
-    border: 5px solid black;
+#navbar ul a{
+    flex: 10%;
+    padding: 30px;
+    margin: 30px;
 }
 
-p{
-    background-color: red;
-    border: 5px solid black;
+#login{
+    align-self: flex-end;
+    padding: 30px;
+    margin: 10px;
+}
+
+main{
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0;
+    justify-content: flex;
+    border-radius: 5px;
+}
+
+#mainHead {
+    flex: 3 0px;
+    min-width: 20%;
+    justify-content: space-between;
+    text-align: center;
+    color: rgb(80, 80, 85);
 }
 
 #artZone{
-    flex-direction: row;
-    background-color: blueviolet;
-    border: 5px solid black;
-
-}
-
-aside{
     display: flex;
-    float: right;
-    background: aliceblue;
-    width: 25%;
-    flex-direction: column;
-    border: 5px solid black;
+    flex-flow: row;
+    align-self: auto;
+    justify-content: space-around;
+}
+#section {
+    margin: 0 auto;
+    flex: 1 1 100%;
+    align-items: stretch;
+    background-color: #ce9aff;
 }
 
-img{
-    width: 50%;
-    height: 50px;
+#section .parag2 {
+    color: rgb(53, 53, 218);
+    font-weight: bold;
 }
-#span {
-    color: black;
-    background: red;
-    border: 5px solid black;
+
+#article {
+    margin: 0 auto;
+    flex: 1 1 100%;
+    align-items: stretch;
+    background-color: #65b5f6;
 }
-#section{
-    background: blue;
-    border: 5px solid black;
+
+body #aside{
+    display: flex;
+    flex-flow: column;
+    background-color: #ce9aff;
+    color: red;
 }
-#footer{
-    display: grid;
-    grid-area: auto;
+
+#aside ol {
+    color: green;
+}
+footer{
+    display: flex;
     background-color: darkgrey;
 } 
+
+/***************Login*************/
+
+.container {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0;
+    justify-content: flex-end;
+}
+
+#container .header {
+    margin: 0;
+    align-items: baseline;
+    text-transform: uppercase;
+}
+
+#div {
+    flex: 3 0px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+}
+
+.wrapContainer {
+    display: flex;
+    flex: 3 0px;
+    justify-content: space-around;
+    background-image: url('/Image/skull.png');
+    background-repeat: no-repeat;
+}
+
+.containerLogin {
+    margin: 100px;
+}
+
+.mainLogin {
+    margin: 50px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    height: 280px;
+    width: 270px;
+    color: rgb(110, 92, 52);
+    background-color: black;
+    border-radius: 60px;
+}
+
+input[type=text] {
+    width: auto;
+    border-radius: 10px;
+}
+
+input[type=password] {
+    width: auto;
+    border-radius: 10px;
+}
+
+input {
+    border: 2px solid;
+    margin: 0.5rem;
+    padding: 0.2rem;
+    transition: background-color 0.5s ease-out;
+}
+
+input:optional {
+    border-color: gray;
+}
+
+input:required {
+    border-color: black;
+}
+
+input:invalid {
+    border-color: red;
+}
+
+button[type=submit] {
+    margin: 2px;
+    height: 25px;
+    width: auto;
+    border-radius: 10px;
+    color: brown;
+}
+
+input[type=checkbox] {
+    margin: 1px;
+}
+
+input[type=button] {
+    display: flex;
+    height: 120px;
+    width: 90px;
+    background-image: url('/Image/david.jpg');
+    background-size: 100px;
+    color: rgb(255, 166, 0);
+    border-radius: 15px;
+}
+
+.cancelbtn {
+    background-color: rgb(220, 66, 0);
+}
+
+.psw {
+    color: #6f6f6d;
+}
